# fastapi-async-with-postgresql

./: .gitignore  404.html  LICENSE  Makefile  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: Install_And_Publish_Docs.yml  ci.yml
about/: index.html
docs/: about.md  index.md
docs/css/: extra.css
locust/: locustfile.py
search/: search_index.json
src/: API_description.md  main.py  pyproject.toml
src/lib/: db_utils.py  models.py  schema.py  utils.py
src/tests/: test_api.py
utils/: __init__.py  __main__.py  logging.py
