[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.dagoury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
colorama = "^0.4.4"
uvicorn = "^0.13.2"
databases = {extras = ["postgresql"], version = "^0.4.1"}
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
locust = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
